Java 16 code improvements